<resources>
    <string name="app_name">TopMoviesca</string>
    <string name="search">search page</string>
    <string name="movieinfo">Movie Info</string>
    <string name="personalinfo">Personal Info</string>
    <string name="plus">十</string>
    <string name="Review">Review</string>
    <string name="send">Send</string>
    <string name="input">Input movie name</string>
    <string name="searching">Search</string>
    <string name="tag">Tags</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="romance">Romance</string>
    <string name="scifi">Sci-Fi</string>
    <string name="thriller">Thriller</string>
    <string name="actionlist">Action List</string>
    <string name="comedylist">Comedy List</string>

    <string name="registnewacct">CREATE A NEW ACCOUNT</string>
    <string name="dscription">Description</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="phone">Phone</string>
    <string name="description">Description</string>

    <string name="romancelist">Romance List</string>
    <string name="scifilist">Sci-Fi List</string>
    <string name="thrillerlist">Thriller List</string>
    <string name="email">E-mail</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="From">From</string>
    <string name="FM">Favorite Movie</string>
    <string name="zodiac">Zodiac</string>
    <string name="Btn">Save</string>
    <string name="hint"> </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Account(e-mail)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is wrong</string>
    <string name="error_invalid_password">Too Short Password</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="skip">"skip"</string>
    <string name="action_sign_out">Sign Out</string>

//from https://github.com/firebase/quickstart-android/blob/master/auth/app/src/main/res/values/strings.xml//

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="addComment">Add your comment :p</string>
    <string name="Comment">Comment</string>
    <string name="register">register</string>
    <string name="wait">Plz wait...</string>
    <string name="Genery">Genery</string>
    <string name="Genre">Genre</string>
    <string name="hint_author">author</string>
    <string name="hint_quoteText">quoteText</string>
    <string name="button_save">save</string>


</resources>
