<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search.searchpageActivity">
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_box"
        android:completionThreshold="1"
        android:hint="@string/input"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/searching"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92dp"
        android:text="@string/Genre"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="242dp"
        android:background="@color/colorRed"
        android:onClick="actionClick"
        android:text="@string/action"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn5"
        android:layout_marginTop="164dp"
        android:background="@color/colorYellow"
        android:onClick="comedyClick"
        android:text="@string/comedy"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn3"
        android:layout_toEndOf="@+id/btn2"
        android:background="@color/colorBlue"
        android:onClick="scifiClick"
        android:text="@string/scifi"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="195dp"
        android:layout_marginStart="53dp"
        android:background="@color/colorPink"
        android:onClick="romanceClick"
        android:text="@string/romance"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn5"
        android:layout_toEndOf="@+id/btn2"
        android:background="@color/colorGrey"
        android:onClick="thrillerClick"
        android:text="@string/thriller"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <include layout="@layout/layout_bottom_navigation_view"/>

</RelativeLayout>