<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextAuthor"
        android:layout_width="338dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_author"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuote"
        tools:layout_editor_absoluteX="23dp" />

    <EditText
        android:id="@+id/editTextQuote"
        android:layout_width="338dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_quoteText"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="23dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:onClick="saveQuote"
        android:text="Save"
        app:layout_constraintTop_toBottomOf="@+id/editTextAuthor"
        tools:layout_editor_absoluteX="273dp"
        tools:text="@string/button_save" />
</LinearLayout>