<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.personalinfoActivity">
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_launcher_foreground"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_toEndOf="@id/profile"
            android:paddingBottom="12dp"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/name"
            android:hint="@string/hint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_below="@id/name"
            android:layout_toEndOf="@id/profile"
            android:paddingBottom="12dp"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/name"
            android:layout_toEndOf="@id/email"
            android:hint="@string/hint"
            android:inputType="text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp">

        <TextView
            android:id="@+id/age"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/age"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@id/age"
            android:inputType="text"
            android:hint="@string/hint"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:paddingTop="12dp"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="39dp"
            android:layout_toEndOf="@+id/gender"
            android:hint="@string/hint"
            android:inputType="text"/>

        <TextView
            android:id="@+id/From"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:paddingTop="12dp"
            android:text="@string/From"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="79dp"
            android:layout_toEndOf="@id/From"
            android:hint="@string/hint"
            android:inputType="text"/>
        <TextView
            android:id="@+id/FM"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/From"
            android:paddingTop="12dp"
            android:text="@string/FM"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="119dp"
            android:layout_toEndOf="@id/FM"
            android:hint="@string/hint"
            android:inputType="text"/>
        <TextView
            android:id="@+id/zodiac"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/FM"
            android:paddingTop="12dp"
            android:text="@string/zodiac"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="159dp"
            android:layout_toEndOf="@id/zodiac"
            android:hint="@string/hint"
            android:inputType="text"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/Btn"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"/>


    </RelativeLayout>

</RelativeLayout>