<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Moive.movieinfoActivity">
    <TextView
        android:id="@+id/MI"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>


    <TextView
        android:id="@+id/review"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:text="@string/Review"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:id="@+id/btn1"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:onClick="plusClick"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"

        android:layout_marginTop="290sp"></RelativeLayout>

</RelativeLayout>